--- a/style/bast.css
+++ b/style/bast.css
@@ -1,26 +1,25 @@
 h1{
   font-weight: bold;
 }
-.mt-10{
-  margin-top: 10;
+.mt-100{
+  margin-top: 50px;
 }
 
-#invoice{
+#bast{
   padding: 20px;
 }
-.invoice {
+.bast {
   position: relative;
   background-color:#fff;
   min-height: 680px;
   padding: 15px;
-  /* box-shadow: 1px 2px 20px rgba(0, 0, 0, .5); */
 }
 .name a{
   color: #ff8000;
   font-weight: bold;
 }
 
-.invoice header {
+.bast header {
   padding: 10px 0;
   margin-bottom: 20px;
   border-bottom: 5px solid #3989c6
@@ -44,18 +43,11 @@ h1{
   margin-right: 20px;
   display: inline-block;
 }
-.tab2{
+.user{
   margin-left: 100px;
 }
 .rowvalue{
   font-weight: bold;
-}
-
-#headertable{
-  background-color:#1B1464;
-  font-weight: bold;
-  text-align: center;
-  color: #fff;
 }
 
 .tandatangan{
@@ -64,4 +56,7 @@ h1{
 
 .mt-18{
   margin-top: 150px;
+}
+.blockquote{
+  padding: 10px;
 }
