--- a/style/styledoc.css
+++ b/style/styledoc.css
@@ -104,3 +104,11 @@ footer {
 .customer p{
     font-weight: normal;
 }
+.table thead th{
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+}
+
+.table tbody td{
+    border-bottom: 1px solid black;
+}
